--- a/main.html
+++ b/main.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Dual image Coordinate Logger for Non-Rigid Registration</title>
+    <title>Image Pair Coordinates Logger for Non-Rigid Registration</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <h1>Dual image Coordinate Logger </h1>
+    <h1>Image Pair Coordinates Logger </h1>
     <h2>for non-rigid registration</h2>
     <p>Instructions: <br>
         1. Upload two images <br>
@@ -17,10 +17,6 @@
         3. Click on the "Export as csv" button to download the coordinates as a csv file <br>
         4. Click on the "Undo the last click" button to undo the last click <br>
 
-    <input type="file" id="imageLoader1" name="imageLoader1" />
-    <br>
-    <input type="file" id="imageLoader2" name="imageLoader2" />
-    <br>
 
     <div id="image1Container" class="imageContainer">
         <img id="image1" class="image">
@@ -31,6 +27,11 @@
         <img id="image2" class="image">
         <p id="cursorPosition2" class="cursorPosition"></p>
     </div>
+    <br>
+    
+    <input type="file" id="imageLoader1" name="imageLoader1" />
+    <br>
+    <input type="file" id="imageLoader2" name="imageLoader2" />
     <br>
 
     <button id="undoButton">Undo the last click</button>
