Minor changes to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         2. Click on the images to log coordinates <br>
         3. Click on the "Export as csv" button to download the coordinates as a csv file <br>
         4. Click on the "Undo the last click" button to undo the last click <br>
-
+        5. Click on the "Clear all points" button to clear all points <br>
+    </p>
 
     <div id="image1Container" class="imageContainer">
         <img id="image1" class="image" onload="drawGrid('image1');">
@@ -30,9 +31,9 @@
     </div>
     <br>
 
-
+    <label for="imageLoader1">Choose Image 1:</label>
     <input type="file" id="imageLoader1" name="imageLoader1" />
-    <br>
+    <label for="imageLoader2">Choose Image 2:</label>
     <input type="file" id="imageLoader2" name="imageLoader2" />
     <br>
 
